--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -13,6 +13,16 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 > Analyze. Decide. Vote.
 
+:::warning Removing A Hotspot from the Denylist with Crowdspot
+
+If a Hotspot has been added to the Denylist in error, the **only** method to have it removed is to
+file a Removal Request using Crowdspot.
+
+**Instructions for submitting a removal request can be found on the
+[Denylist Removal Request documentation page.](/mine-hnt/denylist-removals)**
+
+:::
+
 Crowdspot is an unmonitored, self-service tool built by Nova Labs for the community. This tool
 allows anyone to explore Helium Network Hotspot data to understand atypical Hotspot behavior and
 identify anomalies.
@@ -142,57 +152,6 @@ Hotspots.
 When reporting a Cluster of Hotspots, include all `b58` addresses **and** toggle on the
 `Is this a cluster of Hotspots` checkbox. This information assists in evaluating the legitimacy of
 the Hotspots in the request.
-
-#### Written Reasoning
-
-While not required, submitting a written description to support the Denylist submission can provide
-valuable insight for evaluation.
-
-#### Create the Submittion
-
-Once you have added all the required and optional information, click the `Create Submission` button.
-
-:::note Submission Status
-
-You can view the status of your submission on the
-[Submissions page](https://www.crowdspot.io/submissions/), linked in the Crowdspot menu bar.
-
-:::
-
----
-
-### Submit a Removal Request
-
-:::caution Security
-
-For security reasons, text and visual evidence will only be accessible to Denylist maintainers.
-
-Although you cannot view this evidence when you click on a submission, we assure you that it can be
-seen and is being evaluated.
-
-:::
-
-In an ideal world, Legitimate Hotspots are appropriately screened and not added to the Denylist.
-Still, when this _does_ happen, Hotspot Owners can submit information and evidence to _potentially_
-have a Hotspot removed from the Denylist.
-
-<img className="homeicon" src={useBaseUrl('img/crowdspot/report-removal.png')} />
-
-#### Submission Type
-
-On the Submission form, select the `Removal` radio button under Submission Type.
-
-#### Visual Evidence
-
-Denylist Removal submissions can optionally include visual evidence, such as screenshots or other
-images, to support the removal claim. **At this time, visual evidence can be submitted as a URL**
-with a limit of 3 URLs per submission.
-
-- For multiple images, we recommend using a cloud image storage platform, such as
-  [Google Photos](https://photos.google.com/) or [Flikr](https://www.flickr.com/). Upload your
-  images and share a link to the folder here. **Please ensure you enable the correct sharing
-  settings, as links will be publicly available.**
-- For a single image, we recommend using a free image-to-link converter and paste the URL here.
 
 #### Written Reasoning
 
@@ -480,5 +439,19 @@ While the community will no longer be able to open an issue, Pull Requests will 
 with multi-signature verification for the time being.
 
 Hotspots submitted on Crowdspot will be pushed to the Denylist via Github.
+
+:::
+
+---
+
+## Removing a Hotspot from the Denylist
+
+:::warning Removing A Hotspot from the Denylist with Crowdspot
+
+If a Hotspot has been added to the Denylist in error, the **only** method to have it removed is to
+file a Removal Request using Crowdspot.
+
+**Instructions for submitting a removal request can be found on the
+[Denylist Removal Request documentation page.](/mine-hnt/denylist-removals)**
 
 :::
