adding links to crowdspot

--- a/docs/mine-hnt/denylist-removals.mdx
+++ b/docs/mine-hnt/denylist-removals.mdx
@@ -10,12 +10,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 # Denylist Removal Submissions
 
 To submit a Hotspot for removal from the Denylist, start by logging in with your Helium Wallet and
-clicking on the `Submit Denylist Request` button on the Crowdspot.io landing page.
+clicking on the `Submit Denylist Request` button on the [Crowdspot.io](https://crowdspot.io/) home
+page.
 
 ### Log In with the Helium Wallet App
 
-To associate a Helium Wallet address, click the `Login` menu bar item on the Crowdspot homepage and
-scan the QR code with your phone.
+To associate a Helium Wallet address, click the `Login` menu bar item on the
+[Crowdspot homepage](https://crowdspot.io/) and scan the QR code with your phone.
 
 <img className="appscreenbanner" src={useBaseUrl('img/crowdspot/login-popover.png')} />
 
@@ -96,7 +97,8 @@ with a limit of 3 URLs per submission.
   [Google Photos](https://photos.google.com/) or [Flikr](https://www.flickr.com/). Upload your
   images and share a link to the folder here. **Please ensure you enable the correct sharing
   settings, as links will be publicly available.**
-- For a single image, we recommend using a free image-to-link converter and paste the URL here.
+- For a single image, we recommend using a free image-to-link converter and paste the URL in the
+  text box.
 
 ### Written Reasoning
 
@@ -113,4 +115,5 @@ that this number ID will only appear one time upon submitting, so please save it
 reference.**
 
 You can view the status of your submission on the
-[Submissions page](https://www.crowdspot.io/submissions/), linked in the Crowdspot menu bar.
+[Submissions page](https://www.crowdspot.io/submissions/), linked in the
+[Crowdspot](https://crowdspot.io/) menu bar.
