written descriptions are now required

--- a/docs/mine-hnt/crowdspot.mdx
+++ b/docs/mine-hnt/crowdspot.mdx
@@ -161,8 +161,8 @@ the Hotspots in the request.
 
 #### Written Reasoning
 
-While not required, submitting a written description to support the Denylist submission can provide
-valuable insight for evaluation.
+Submitting a written description to support the Denylist submission provides valuable insight for
+evaluation. A minimum of 150 characters is required.
 
 #### Create the Submittion
 
