--- a/docs/mine-hnt/denylist-removals.mdx
+++ b/docs/mine-hnt/denylist-removals.mdx
@@ -102,8 +102,8 @@ with a limit of 3 URLs per submission.
 
 ### Written Reasoning
 
-While not required, submitting a written description to support the Denylist submission can provide
-valuable insight for evaluation.
+Submitting a written description to support the Removal Request submission provides valuable insight
+for evaluation. A minimum of 150 characters is required.
 
 ### Create the Submission
 
