--- a/docs/mine-hnt/denylist.mdx
+++ b/docs/mine-hnt/denylist.mdx
@@ -29,8 +29,8 @@ identified not to be accurately contributing to Network coverage or are otherwis
 good faith of the Network in an attempt to earn Rewards. Rewards gaming by dishonest actors, even as
 a small percentage of the Network, erodes Network integrity.
 
-Examples include, but are not limited to: Clusters Packet Forwarders Misasserted Location
-Misasserted Antennas Multiple Antennas Attenuators and Amplifiers Data Credit Farming
+Examples include, but are not limited to: Cluster Packet Forwarders, Misasserted Locations,
+Misasserted Antennas, Multiple or Shared Antennas, Attenuators, Amplifiers and Data Credit Farming
 
 Helium Network Validators optionally subscribe to the Denylist to block HNT Rewards to dishonest
 Hotspots while recording on-chain records of the denied transactions. The Denylist is another tool
@@ -111,7 +111,7 @@ check transactions against.
 
 To effectively block any transaction, a 2F+1 majority of Validators in a consensus must agree,
 meaning that 29 of the 43 members in a consensus group must agree. With over
-[3600](https://explorer.helium.com/validators) Validators online and 43 randomly selected from that
+[2900](https://explorer.helium.com/validators) Validators online and 43 randomly selected from that
 pool for consensus, it would be prohibitively expensive for a bad actor to deny arbitrary Hotspots.
 
 **What if the Denylist doesn’t have all of the gaming Hotspots?**
@@ -127,7 +127,8 @@ to do what is in the best interest of the Network.
 
 **Will the Denylist have the ability to block data transfer or rewards for data transfer?**
 
-No, any Hotspot considered ‘denied’ will still be able to act as a data-only Hotspot, providing
-whatever Network coverage possible. However, it is generally the case that these Hotspots did not
-provide coverage in the first place, hence their inclusion. Is it important to understand the
+Yes, any Hotspot considered ‘denied’ of Proof of Coverage rewards will still be able to act as a 
+data-only Hotspot, providing data transfer network coverage where possible, but these hotspots will 
+be blocked from data transfer rewards. Beacause tt is generally the case that these Hotspots did not
+provide sensor coverage in the first place, hence their inclusion. Is it important to understand the
 uninterrupted data transfer ability in the case of errant inclusions.
