--- a/docs/mine-hnt/denylist.mdx
+++ b/docs/mine-hnt/denylist.mdx
@@ -129,6 +129,6 @@ to do what is in the best interest of the Network.
 
 Yes, any Hotspot considered ‘denied’ of Proof of Coverage rewards will still be able to act as a 
 data-only Hotspot, providing data transfer network coverage where possible, but these hotspots will 
-be blocked from data transfer rewards. Beacause tt is generally the case that these Hotspots did not
+be blocked from data transfer rewards. Because it is generally the case that these Hotspots did not
 provide sensor coverage in the first place, hence their inclusion. Is it important to understand the
 uninterrupted data transfer ability in the case of errant inclusions.
