--- a/docs/mine-hnt/denylist-removals.mdx
+++ b/docs/mine-hnt/denylist-removals.mdx
@@ -16,7 +16,8 @@ page.
 ### Log In with the Helium Wallet App
 
 To associate a Helium Wallet address, click the `Login` menu bar item on the
-[Crowdspot homepage](https://crowdspot.io/) and scan the QR code with your phone.
+[Crowdspot homepage](https://crowdspot.io/) and scan the QR code with your phone's camera or QR code
+scanner.
 
 <img className="appscreenbanner" src={useBaseUrl('img/crowdspot/login-popover.png')} />
 
@@ -29,30 +30,22 @@ Crowdspot.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
-    <div class="col col--4" style={{ marginBottom: 0 }}>
-      <img className="appscreen " src={useBaseUrl('img/crowdspot/wallet-connect-prompt.png')} />
-    </div>
-    <div class="col col--4" style={{ marginBottom: 0 }}>
-      <img
-        className="appscreen "
-        src={useBaseUrl('img/crowdspot/wallet-connect-choose-account.png')}
-      />
-    </div>
-    <div class="col col--4" style={{ marginBottom: 0 }}>
-      <img
-        className="appscreen "
-        src={useBaseUrl('img/crowdspot/wallet-connect-sending-transaction.png')}
-      />
-    </div>
-  </div>
-  <div class="row">
-    <div class="col col--4" style={{ marginBottom: 0 }}>
+    <div class="col col--4">
+      <img className="appscreen" src={useBaseUrl('img/crowdspot/wallet-connect-prompt.png')} />
       <b>Confirm Connection Start</b>
     </div>
-    <div class="col col--4" style={{ marginBottom: 0 }}>
+    <div class="col col--4">
+      <img
+        className="appscreen"
+        src={useBaseUrl('img/crowdspot/wallet-connect-choose-account.png')}
+      />
       <b>Choose Wallet</b>
     </div>
-    <div class="col col--4" style={{ marginBottom: 0 }}>
+    <div class="col col--4">
+      <img
+        className="appscreen"
+        src={useBaseUrl('img/crowdspot/wallet-connect-sending-transaction.png')}
+      />
       <b>Authenticate</b>
     </div>
   </div>
@@ -94,7 +87,7 @@ images, to support the removal claim. **At this time, visual evidence can be sub
 with a limit of 3 URLs per submission.
 
 - For multiple images, we recommend using a cloud image storage platform, such as
-  [Google Photos](https://photos.google.com/) or [Flikr](https://www.flickr.com/). Upload your
+  [Google Photos](https://photos.google.com/) or [Flickr](https://www.flickr.com/). Upload your
   images and share a link to the folder here. **Please ensure you enable the correct sharing
   settings, as links will be publicly available.**
 - For a single image, we recommend using a free image-to-link converter and paste the URL in the
@@ -102,8 +95,8 @@ with a limit of 3 URLs per submission.
 
 ### Written Reasoning
 
-While not required, submitting a written description to support the Denylist submission can provide
-valuable insight for evaluation.
+Submitting a written description to support the Removal Request submission provides valuable insight
+for evaluation. A minimum of 150 characters is required.
 
 ### Create the Submission
 
