relocated how to mine section and fix headers

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -42,6 +42,35 @@ Radio(s) on the existing Helium Blockchain.
 
 ---
 
+## How To Mine MOBILE
+
+The Helium Network rewards 5G Hotspots with CBRS Radios ("Radios") for providing 5G wireless
+coverage and verifying the Helium Network with the Helium MOBILE Token.
+
+Mining MOBILE by providing 5G coverage requires a 5G Hotspot and one or more compatible, online
+Radios. Radios must also be registered in the SAS (Spectrum Access System) maintained by the FCC.
+
+Several factors contribute to the amount of MOBILE a 5G Hotspot may earn over a given period. This
+page covers some higher-level concepts, design elements, and rules to keep in mind that help better
+explain what you might earn and why.
+
+:::info Where Do Rewards Go?
+
+MOBILE PoC rewards are credited to the Wallet that owns the 5G Hotspot a given Radio is connected to
+when the Rewards Oracle disperses MOBILE PoC Rewards.
+
+:::
+
+Once properly deployed, Network Builders are not required to do anything else with your 5G Hotspot
+or Radios to earn MOBILE.
+
+More than one Radio can be connected to a single 5G Hotspot to create a larger 5G coverage area,
+with 5G Hotspots able to support as many Radios as would saturate their bandwidth. Note that
+connecting more than one Radio may require an additional networking switch. Refer to the 5G Hotspot
+Maker installation guides for specific instructions.
+
+---
+
 ## Pre-Mine
 
 As defined in [HIP-51](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) and
