--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -208,7 +208,7 @@ Neighborhoods.
 
 :::
 
-### Small Cell Radios Need GPS
+### Small Cell Radio GPS Requirement
 
 All compatible CBRS Small Cell Radios use GPS for network timing data and to assert the Small Cell
 Radio's location when requesting approval to transmit from the FCC-regulated Spectrum Access System
