--- a/docs/mine-hnt/maker-apps.mdx
+++ b/docs/mine-hnt/maker-apps.mdx
@@ -208,12 +208,7 @@ Use the "Edit this Page" link at the bottom of this page to submit corrections.
 ### Milesight IoT
 
 - Discord : https://discord.gg/2wAbU4eyRy
-
-:::note This Maker has not yet submitted an App for inclusion on this page.
-
-Use the "Edit this Page" link at the bottom of this page to submit corrections.
-
-::: https://play.google.com/store/apps/details?id=com.milesight.hotspot
+- Android App: https://play.google.com/store/apps/details?id=com.milesight.hotspot
 
 ### MNTD / RAK Wireless
 
