blog images and links fixed

--- a/blog/2020-12-09-blockchain-release-hip-17/index.mdx
+++ b/blog/2020-12-09-blockchain-release-hip-17/index.mdx
@@ -35,27 +35,19 @@ overall rewards will go down by `80%`.**
 
 _Sparse Density Scaling_
 
-<a href="green">
-  <img src="/assets/sparse.png" align="center" height="500" width="500"></img>
-</a>
+![sparse](./sparse.png)
 
 _Variable Scaling_
 
-<a href="green">
-  <img src="/assets/variable.png" align="center" height="500" width="500"></img>
-</a>
+![variable](./variable.png)
 
 _Dense Cluster Scaling_
 
-<a href="green">
-  <img src="/assets/dense.png" align="center" height="500" width="500"></img>
-</a>
+![dense](./dense.png)
 
 _Finally, here's San Francisco with Scaling_
 
-<a href="green">
-  <img src="/assets/sf.png" align="center"></img>
-</a>
+![sf](./sf.png)
 
 The team had previously published `2020.11.10.0` which added support for
 [HIP15](https://github.com/helium/HIP/blob/master/0015-beaconing-rewards.md), this release adds on
