--- a/blog/2020-12-14-blockchain-release-hip-17-bugfixes/index.mdx
+++ b/blog/2020-12-14-blockchain-release-hip-17-bugfixes/index.mdx
@@ -40,27 +40,19 @@ Here are some updated images from the tool for reference
 
 _Sparse Density Scaling_
 
-<a href="green">
-  <img src="/assets/sparse-v2.png" align="center" height="500" width="500"></img>
-</a>
+![sparse-v2](./sparse-v2.png)
 
 _Variable Scaling_
 
-<a href="green">
-  <img src="/assets/variable-v2.png" align="center" height="500" width="500"></img>
-</a>
+![variable-v2](./variable-v2.png)
 
 _Dense Cluster Scaling_
 
-<a href="green">
-  <img src="/assets/dense-v2.png" align="center" height="500" width="500"></img>
-</a>
+![dense-v2](./dense-v2.png)
 
 _Finally, here's San Francisco with Scaling_
 
-<a href="green">
-  <img src="/assets/sf-v2.png" align="center"></img>
-</a>
+![sf-v2](./sf-v2.png)
 
 #### [miner#580](https://github.com/helium/miner/pull/580): Adjust Spreading Factor
 
