--- a/blog/2021-01-26-maker-audit/index.mdx
+++ b/blog/2021-01-26-maker-audit/index.mdx
@@ -54,7 +54,7 @@ status before purchasing.
 **Results of the Audit are based on samples provided at start of audit. Consumer discretion is
 advised.**
 
-<img src="/assets/maker-audit.png" align="center" width="100%"></img>
+![maker-audit](./maker-audit.png)
 
 ## Table Definitions
 
