--- a/blog/2021-01-28-hotspot-firmware-power-updates/index.mdx
+++ b/blog/2021-01-28-hotspot-firmware-power-updates/index.mdx
@@ -19,7 +19,7 @@ We’ve discovered that Hotspots with the Semtech SX1302 chip inside (v2 Helium 
 Hotspots) had their Transmit Power table configured incorrectly. This change will increase the power
 output from 20 dBm to 27 dBm, which will significantly increase the range of PoC.
 
-<img src="/assets/US915.png" align="center" width="100%"></img>
+![US915](./US915.png)
 
 #### EU868 Hotspots (Helium and RAK):
 
