--- a/blog/2021-02-16-maker-update/index.mdx
+++ b/blog/2021-02-16-maker-update/index.mdx
@@ -67,4 +67,4 @@ Nebra completed this step on February 9, 2021. You can see their Add Hotspot tra
 
 **Results of the Audit are based on samples provided at start of audit.**
 
-<img src="/assets/maker-update-2-16.png" align="center" width="100%"></img>
+![maker-update-2-16](./maker-update-2-16.png)
