--- a/blog/2021-03-19-maker-update-march/index.mdx
+++ b/blog/2021-03-19-maker-update-march/index.mdx
@@ -22,4 +22,4 @@ A summary of how a Maker goes from HIP19-approved to market:
 
 **Results of the Audit are based on samples provided at start of audit.**
 
-<img src="/assets/maker-update-3-19.png" align="center" width="100%"></img>
+![maker-update-3-19](./maker-update-3-19.png)
