--- a/blog/2021-04-06-api-retrospective/index.mdx
+++ b/blog/2021-04-06-api-retrospective/index.mdx
@@ -46,7 +46,7 @@ outage. This is colloquially known as a thundering herd.
 We’ve added a Network Status banner notification in the Helium app that appears when an incident is
 reported. This update is available in 3.0.6.
 
-<img src="/assets/banner.png" align="center" width="25%"></img>
+![banner](./banner.png)
 
 We’ve created a twitter bot [@helium_status](https://twitter.com/helium_status) to automatically
 tweet incidents and updates from our [status page](status.helium.com).
