--- a/blog/2021-04-13-maker-update-april/index.mdx
+++ b/blog/2021-04-13-maker-update-april/index.mdx
@@ -58,4 +58,4 @@ all submitted applications and pending hardware audits.
 
 **Results of the Audit are based on samples provided at start of audit.**
 
-<img src="/assets/maker-update-4-13.png" align="center" width="100%"></img>
+![maker-update-4-13](./maker-update-4-13.png)
