--- a/blog/2021-09-07-app-version-350/index.mdx
+++ b/blog/2021-09-07-app-version-350/index.mdx
@@ -15,12 +15,9 @@ good old days and it just hurts too much? Or maybe you want to hide it for other
 judge. Now you can hide it from app view (but it’ll stay associated with your account). To unhide
 Hotspots, go to Settings to view hidden Hotspots.
 
-<a href="green">
-  <img src="/assets/app/hide_hotspot.PNG" align="center" height="300"></img>
-</a>
-<a href="green">
-  <img src="/assets/app/hide_hotspot2.PNG" align="center" height="300"></img>
-</a>
+![hide_hotspot](./hide_hotspot.png)
+
+![hide_hotspot2](./hide_hotspot2.png)
 
 ## Validators
 
@@ -30,13 +27,9 @@ app, see its earnings, penalties, online status, and how many consensus groups i
 
 You'll also be able to see the current consensus group in the app.
 
-<a href="green">
-  <img src="/assets/app/validator.PNG" align="center" height="300"></img>
-</a>
+![validator](./validator.png)
 
-<a href="green">
-  <img src="/assets/app/consensus_group.PNG" align="center" height="300"></img>
-</a>
+![consensus_group](./consensus_group.png)
 
 ## Adds iPad support
 
